# HallucinationDetection

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
Documentazione/: main.aux  main.bbl  main.bib  main.blg  main.lof  main.lot  main.synctex(busy)  main.tex  main.toc
Documentazione/drawio/: AlignApp1.drawio  AlignApp2.drawio  AppH.drawio  AppL.drawio  AutoEncApp2.drawio  EncoderApp3.drawio  MLPApp1.drawio  MLPApp2.drawio  MLPApp3.drawio  PipeApp1.drawio  PipeApp2.drawio  PipeApp3.drawio  metodologia.drawio
Documentazione/extra/: extra.tex
Documentazione/sections/: 0_i_ack.tex  0_ii_abstract.tex  1_introduction.tex  2_background.tex  3_methodology.tex  4_results.tex  5_discussion.tex  6_conclusion.tex  appendixA.tex  appendixB.tex
Presentazione/: presentazione.aux  presentazione.nav  presentazione.out  presentazione.tex  presentazione.toc
Presentazione/sections/: 1_introduction.tex  2_background.tex  3_methodology.tex  4_results.tex  5_discussion.tex  6_conclusion.tex
graf/: graf.py
notebooks/: NOTA.TXT  graph.ipynb  graph.py  graph2.py  note.ipynb  preliminarLinear.ipynb
notebooks/HybridApproach/: Happroach.ipynb  MLPAdapter.ipynb  MLPAdapter.py  hApp.py
notebooks/layersStudies/: all_layers_sorted.json  all_layers_sorted_GEMMA_LLAMA_BBC.json  all_layers_sorted_GEMMA_LLAMA_BBF.json  all_layers_sorted_GEMMA_LLAMA_HE.json  img.py  study.ipynb  study.py
notebooks/linearApproach/: FullLinear.ipynb  fullLinear.py  linear.py  preliminarLinear.ipynb
scripts/: generate_cross_domain_table.py
src/data/: BeliefBankDataset.py  (+3 more)
(+65 files in other folders)
